--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
 <!DOCTYPE html>
+<html lang="en">
+<!-- Phase 1 -->
+	<!-- Add Jumbotron for title -->
+	<!-- Add a form with one input field and one submit button --> 
+	<!-- Add a Skip Login, Find My Beer button -->
+	<!-- Add an About Us button and data -->
+	<!-- Add a Disclaimer button and data -->
+	<!-- Add an Uber button and link -->
+<!-- Phase 2 --> 
+	<!-- Add a form with 3 input fields: a drop-down input to select the type of brewery, -->
+	<!-- a text input to search for breweries by zip code, and -->
+	<!-- a drop-down input to select the search radius -->
+	<!-- Display a map -->
+	<!-- Display a list of breweries based on search results -->
+	<!-- Add buttons for each brewery returned -->
+<!-- Phase 3 -->
+	<!-- Display brewery menu options based on search results -->
+	<!-- Add menu branching to include -->
+		<!-- Name and location of brewery -->
+		<!-- Brewery data -->
+		<!-- Yelp data -->
+	<!-- If the user logged in, display his first two or three previously rated breweries/beers, and -->
+		<!-- link those items to all of the user's stored data via table format, and -->
+		<!-- create a form with element inputs tdb -->
+	<!-- If the user did not log in, create a form with element inputs tbd -->
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>BeerMe</title>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<!-- Add external JS -->
+	<script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link ref="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/readable/bootstrap.min.css">
+	<!-- Added Semantic -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="../Beer-Me/assets/css/style.css">
+
+</head>
+<body>
+	<div class="container">
+		<!-- Jumbotron for Title -->
+
+	</div>
+
+</body>
+</html>
