--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <!-- Phase 1 -->
 	<!-- Add Jumbotron for title -->
 	<!-- Add a form with one input field and one submit button --> 
+	        <div class="panel-body">
+              <form role="form">
+                <div class="form-group">
+                  <label for="name-input">Zip code:</label>
+                  <input class="form-control" id="name-input" type="number">
+                </div>
+            	 <button class="btn btn-default" id="add-user" type="submit">Submit</button>
+              </form>
+            </div>
 	<!-- Add a Skip Login, Find My Beer button -->
 	<!-- Add an About Us button and data -->
 	<!-- Add a Disclaimer button and data -->
@@ -44,6 +53,8 @@
 		<!-- Jumbotron for Title -->
 
 	</div>
+
+
 
 </body>
 </html>
