--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Phase 1 -->
-	<!-- Add Jumbotron for title -->
+		<!-- Jumbotron for Title -->
+	<div class = "jumbotron">
+		<div class="container">
+
+		<!-- add text here -->
+
+		</div>
+	</div>
+
 	<!-- Add a form with one input field and one submit button --> 
 	        <div class="panel-body">
               <form role="form">
@@ -49,12 +57,14 @@
 
 </head>
 <body>
-	<div class="container">
 		<!-- Jumbotron for Title -->
+	<div class = "jumbotron">
+		<div class="container">
 
+		<!-- add text here -->
+
+		</div>
 	</div>
-
-
 
 </body>
 </html>
